# penguin

./: .env  generate-response-stream.py  pyproject.toml
penguin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
