[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penguin"
version = "0.1.0"
description = "A CLI chatbot for advanced linux users"
authors = [{ name = "RHBK" }]
license = "MIT"
dependencies = ["ollama==0.12.9", "python-dotenv==1.2.1"]

[project.scripts]
start-chat = "src.main:main"
run-tests = "src.main:run_tests"

[tool.setuptools]
packages = ["src"]
